<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/amount_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="22dp"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTip"
        android:layout_alignBottom="@+id/tvTip"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignRight="@+id/tvCalculatedTipValue"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPartySize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etTip"
        android:layout_marginTop="32dp"
        android:text="@string/party_size_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etPartySize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTip"
        android:layout_alignTop="@+id/tvPartySize"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPartySize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/summary_albel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvCalculatedTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvCalculatedTipKey"
        android:layout_toRightOf="@+id/tvSummary"
        android:text="@string/zero_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTotalBillKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvCalculatedTipKey"
        android:layout_below="@+id/tvCalculatedTipKey"
        android:layout_marginTop="20dp"
        android:text="@string/total_bill_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTotalBillValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTotalBillKey"
        android:layout_toRightOf="@+id/tvSummary"
        android:text="@string/zero_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvPerPersonSummaryKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvTotalBillKey"
        android:layout_below="@+id/tvTotalBillKey"
        android:layout_marginTop="20dp"
        android:text="@string/per_person_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvCalculatedTipKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSummary"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/tvSummary"
        android:text="@string/calculatedtip_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/tvPerPersonSummaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPerPersonSummaryKey"
        android:layout_toRightOf="@+id/tvSummary"
        android:text="@string/zero_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/btnSaveTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etAmount"
        android:layout_alignTop="@+id/tvTip"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:onClick="saveTipValueToFile"
        android:src="@drawable/ic_menu_save" />

</RelativeLayout>
